--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,13 @@
+html {
+  font-size: 10px;
+} 
+
+@media screen and (max-width: 768px) { 
+  html {
+    /* font-size: 8px; */
+  }
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
